[tool.poetry]
authors     = [ "Your Name <you@example.com>" ]
description = "Following a tutorial"
homepage    = "https://github.com/rlshannon/hypermodern-python-tutorial"
keywords    = [ "hypermodern" ]
license     = "MIT"
name        = "hypermodern-python-tutorial"
readme      = "README.md"
repository  = "https://github.com/rlshannon/hypermodern-python-tutorial"
version     = "0.1.0"

        [tool.poetry.dependencies]
        click  = "^7.1.2"
        python = "^3.7"
        requests = "^2.24.0"

        [tool.poetry.dev-dependencies]
        pytest = "^5.4.3"

        [tool.poetry.scripts]
        hypermodern-python-tutorial = "hypermodern_python_tutorial.console:main"

[build-system]
build-backend = "poetry.masonry.api"
requires      = [ "poetry>=0.12" ]
